--- a/package.json
+++ b/package.json
@@ -38,10 +38,82 @@
     "mocha": "^2.5.3",
     "slate": "^0.33.4",
     "slate-hyperscript": "^0.5.10",
-    "slate-simulator": "^0.4.27"
+    "slate-simulator": "^0.4.27",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^4.4.1",
+    "cross-env": "^5.1.3",
+    "css-loader": "^0.28.9",
+    "disc": "^1.3.2",
+    "eslint": "^4.16.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.5.0",
+    "eslint-plugin-react": "^7.6.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "faker": "^3.1.0",
+    "fbjs": "^0.8.3",
+    "fs-promise": "^1.0.0",
+    "gh-pages": "^0.11.0",
+    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-template": "^6.1.0",
+    "image-extensions": "^1.1.0",
+    "immutable": "^3.8.1",
+    "is-hotkey": "^0.1.1",
+    "is-url": "^1.2.2",
+    "jsdom": "^11.5.1",
+    "lerna": "^2.7.1",
+    "lodash": "^4.17.4",
+    "matcha": "^0.7.0",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.10.2",
+    "prismjs": "^1.5.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-frame-aware-selection-plugin": "^1.0.0",
+    "react-frame-component": "^1.1.1",
+    "react-hot-loader": "^3.1.3",
+    "react-portal": "^3.1.0",
+    "react-router": "^2.5.1",
+    "react-router-dom": "^4.1.1",
+    "read-metadata": "^1.0.0",
+    "read-yaml-promise": "^1.0.2",
+    "rollup": "^0.55.1",
+    "rollup-plugin-alias": "^1.4.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-uglify": "^3.0.0",
+    "slate-collapse-on-escape": "^0.6.0",
+    "slate-soft-break": "^0.6.0",
+    "slate-sugar": "^0.6.1",
+    "source-map-loader": "^0.2.3",
+    "source-map-support": "^0.4.0",
+    "style-loader": "^0.20.2",
+    "to-camel-case": "^1.0.0",
+    "to-title-case": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^1.1.8",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1",
+    "yaml-js": "^0.2.0"
   },
   "scripts": {
-    "clean": "rm -rf ./dist ./lib ./node_modules"
+    "clean": "rm -rf ./dist ./lib ./node_modules",
+    "build": "cross-env NODE_ENV=production rollup --config ./support/rollup/config.js"
   },
   "umdGlobals": {
     "immutable": "Immutable",
